--- a/To-Do-List for Team Challenge/index.html
+++ b/To-Do-List for Team Challenge/index.html
@@ -17,6 +17,7 @@
         <ul id="taskList"></ul>
         <p id="status"></p>
     </div>
+    <script src="storage.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
